parser/src/test/resources/corpus/valid/38_parens.ff
rule "Parens" {
  let total = (a + b) * (c - d)
  let nested = ((x + y) - (z + w)) / 2
}
