parser/src/test/resources/corpus/invalid/39_extra_close_paren.ff
rule "Extra Close Paren" {
  let x = a + b)
}
